--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 * {
+  font-family: "Exo 2", sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -15,7 +16,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #55c7bcb1;
+  background-color: #4ca9d1c5;
   height: 60px;
 }
 
@@ -29,7 +30,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #64ccc3ae;
+  background-color: #479ec3c5;
   color: white;
 }
 
@@ -43,7 +44,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #55c7bc88;
+  background-color: #448ead88;
   color: white;
   text-align: center;
 }
