--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body {
   overflow: hidden;
   background-color: #4ca9d1c5;
   height: 60px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 20px 0px;
 }
 
 .topnav a {
