--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,33 @@ footer {
   color: white;
   text-align: center;
 }
+
+ul {
+  display: flex;
+  padding: 20px;
+}
+
+li {
+  margin-bottom: 10px;
+  list-style-type: none;
+  padding: 10px;
+}
+
+a {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+a::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 1px;
+  background: rgb(255, 255, 255);
+  transition: width 0.3s ease-in;
+}
+
+a:hover::after {
+  width: 100%;
+}
