--- a/css/main.css
+++ b/css/main.css
@@ -327,3 +327,48 @@ input {
 .button:hover {
   background-color: #5ce6b0;
 }
+
+
+
+/* register */
+
+.registerContainer{
+  height: 100vh;
+  width: 100%;
+  background-color: purple;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.registerContainer .registerBox{
+  height: 68vh;
+  width: 39%;
+  border-radius: 5px;
+  background-color: green;
+  display: flex;
+  flex-direction: column;
+}
+
+.registerContainer .registerBox h3{
+  font-size: 3rem;
+  columns: #444;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.registerContainer .registerBox form{
+  height: 80%;
+  width: 100%;
+  background-color: yellow;
+  display: flex;
+  flex-direction: column;
+}
+
+.registerContainer .registerBox form input{
+  width: 80%;
+  align-self: center;
+  margin-bottom: 10px;
+  color: #000;
+}
