--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ section {
   color: var(--orange);
   border-radius: 0.5rem;
   padding: 0.2rem 1rem;
+  border: 0.2rem solid var(--orange);
 }
 
 .heading span.space {
@@ -97,6 +98,10 @@ header .navbar a {
 
 header .navbar a:hover {
   color: var(--orange);
+}
+
+.header {
+  margin-top: 200px;
 }
 
 header .icons i {
@@ -257,7 +262,7 @@ header .search-bar-container label:hover {
 }
 
 .home .content h3 {
-  font-size: 4.5rem;
+  font-size: 6.5rem;
 
   color: #fff;
   text-transform: uppercase;
@@ -314,7 +319,8 @@ header .search-bar-container label:hover {
 }
 
 .book .row .image img {
-  width: 100%;
+  width: auto;
+  height: 600px;
 }
 
 .book .row form {
@@ -356,7 +362,6 @@ header .search-bar-container label:hover {
   border-radius: 0.5rem;
   overflow: hidden;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-  margin-top: 60px;
 }
 
 .packages .box-container .box img {
@@ -525,6 +530,7 @@ header .search-bar-container label:hover {
   flex-wrap: wrap;
   gap: 1.5rem;
   align-items: center;
+  margin-top: 40px;
 }
 
 .contact .row .image {
@@ -533,12 +539,13 @@ header .search-bar-container label:hover {
 
 .contact .row .image img {
   width: 100%;
+  height: 450px;
 }
 
 .contact .row form {
   flex: 1 1 50rem;
   padding: 2rem;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1rem 5rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
 }
 
@@ -685,4 +692,40 @@ header .search-bar-container label:hover {
 
 .mySlides {
   display: none;
+}
+
+.rating {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.rating li {
+  list-style-type: none;
+}
+
+.rating-item {
+  border: 1px solid #fff;
+  cursor: pointer;
+  font-size: 2.5em;
+  color: var(--orange);
+}
+
+.rating-item::before {
+  content: "\2605";
+}
+.rating-item.active ~ .rating-item::before {
+  content: "\2606";
+}
+
+.rating:hover .rating-item::before {
+  content: "\2605";
+}
+
+.rating-item:hover ~ .rating-item::before {
+  content: "\2606";
+}
+
+.tekst {
+  font-size: 20px;
 }
