--- a/css/adminPanel.css
+++ b/css/adminPanel.css
@@ -1,5 +1,8 @@
 /* Googlefont Poppins CDN Link */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+:root {
+  --orange: #3da17b;
+}
 * {
   margin: 0;
   padding: 0;
@@ -63,6 +66,15 @@
   color: #fff;
 }
 .sidebar .nav-links li a .links_name {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+
+.sidebar .nav-links li a .links_logo {
+  margin-left: 200px;
+
   color: #fff;
   font-size: 15px;
   font-weight: 400;
@@ -437,4 +449,11 @@ nav .profile-details i {
     left: 60px;
     width: calc(100% - 60px);
   }
+}
+
+.logo span {
+  color: black;
+  font-size: 2.5rem;
+  font-weight: bolder;
+  text-decoration: none;
 }
