--- a/css/adminPanel-locations.css
+++ b/css/adminPanel-locations.css
@@ -438,3 +438,25 @@ nav .profile-details i {
     width: calc(100% - 60px);
   }
 }
+
+.add {
+  color: white;
+  text-decoration: none;
+  width: 20px;
+  height: 50px;
+  background: #3da17b;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.add:hover {
+  background-color: #328062;
+}
+
+.delete {
+  background-color: rgb(202, 12, 12);
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 3px;
+}
