--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,15 @@
   background: var(--orange);
   color: #fff;
 }
-
+body {
+  height: auto;
+  width: 100%;
+}
 html {
   font-size: 62.5%;
   overflow-x: hidden;
   scroll-padding-top: 6rem;
   scroll-behavior: smooth;
-}
-
-section {
-  padding: 2rem 9%;
 }
 
 .heading {
@@ -93,7 +92,7 @@ header .logo span {
 
 header .navbar a {
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   margin: 0 4rem;
 }
 
@@ -356,7 +355,6 @@ header .search-bar-container label:hover {
 .packages .box-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
 }
 
 .packages .box-container .box {
@@ -364,6 +362,7 @@ header .search-bar-container label:hover {
   border-radius: 0.5rem;
   overflow: hidden;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  margin: 50px;
 }
 
 .packages .box-container .box img {
@@ -527,6 +526,11 @@ header .search-bar-container label:hover {
   font-size: 1.7rem;
 }
 
+.contact {
+  height: auto;
+  width: 100%;
+}
+
 .contact .row {
   display: flex;
   flex-wrap: wrap;
@@ -542,6 +546,7 @@ header .search-bar-container label:hover {
 .contact .row .image img {
   width: 100%;
   height: 450px;
+  margin-left: 104px;
 }
 
 .contact .row form {
@@ -549,6 +554,7 @@ header .search-bar-container label:hover {
   padding: 2rem;
   box-shadow: 0 1rem 5rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
+  margin: 90px;
 }
 
 .contact .row form .inputBox {
@@ -578,59 +584,105 @@ header .search-bar-container label:hover {
   text-align: center;
 }
 
-.footer {
-  background: #333;
-}
-
-.footer .box-container {
+.footer-content {
   display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-}
-
-.footer .box-container .box {
-  padding: 1rem 0;
-  flex: 1 1 25rem;
-}
-
-.footer .box-container .box h3 {
-  font-size: 2.5rem;
-  padding: 0.7rem 0;
-  color: #fff;
-}
-
-.footer .box-container .box p {
-  font-size: 1.5rem;
-  padding: 0.7rem 0;
-  color: #eee;
-}
-
-.footer .box-container .box a {
-  display: block;
-  font-size: 1.5rem;
-  padding: 0.7rem 0;
-  color: #eee;
-}
-
-.footer .box-container .box a:hover {
-  color: var(--orange);
-  text-decoration: underline;
-}
-
-.footer .credit {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
-  padding: 2rem 1rem;
-  margin-top: 1rem;
-  font-size: 2rem;
-  font-weight: normal;
+  background-color: #222;
+}
+.footer-content h3 {
+  font-size: 2.1rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+.footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+  color: #cacdd2;
+}
+.socials {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+.socials li {
+  margin: 0 10px;
+}
+.socials a {
+  text-decoration: none;
   color: #fff;
-  border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
+  border: 1.1px solid white;
+  padding: 5px;
+
+  border-radius: 50%;
+}
+.socials a i {
+  font-size: 1.1rem;
+  width: 20px;
+
+  transition: color 0.4s ease;
+}
+.socials a:hover i {
+  color: aqua;
 }
 
-.footer .credit span {
-  color: var(--orange);
+.footer-bottom {
+  background: #222;
+  height: 90px;
+  width: 100vw;
+  padding: 20px;
+  padding-bottom: 40px;
+  text-align: center;
+}
+.footer-bottom p {
+  float: left;
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+  color: white;
+}
+.footer-bottom p a {
+  color: #44bae8;
+  font-size: 16px;
+  text-decoration: none;
+}
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: 0.4;
+  font-weight: 200;
+}
+.footer-menu {
+  float: right;
+}
+.footer-menu ul {
+  display: flex;
+}
+.footer-menu ul li {
+  padding-right: 10px;
+  display: block;
+}
+.footer-menu ul li a {
+  color: #cfd2d6;
+  text-decoration: none;
+}
+.footer-menu ul li a:hover {
+  color: #27bcda;
 }
 
+@media (max-width: 500px) {
+  .footer-menu ul {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+}
 /* media queries  */
 
 @media (max-width: 1200px) {
@@ -730,4 +782,66 @@ header .search-bar-container label:hover {
 
 .tekst {
   font-size: 20px;
+}
+
+.flex-section {
+  display: flex;
+  min-height: calc(100vh - 90px);
+  margin: auto;
+}
+
+.flex-section img {
+  object-fit: cover;
+  width: 100%;
+  height: 500px;
+}
+.alt-hero-banner {
+  align-items: center;
+  background: #f4f4f4;
+  color: #000;
+}
+.column-right {
+  flex-basis: 50%;
+  margin: 3rem;
+  line-height: 1.5;
+}
+.column-left {
+  flex-basis: 50%;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+p {
+  font-size: 1rem;
+  color: #777;
+}
+.cta-btn {
+  background: none;
+  color: #ef701f;
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  padding: 15px 25px 15px 25px;
+  border: 2px solid #ef701f;
+  cursor: pointer;
+  font-weight: 600;
+  transition: 0.5s ease-in-out;
+}
+.arrow {
+  margin-left: 1rem;
+  transition: 0.5s ease-in-out;
+  height: 8px;
+  color: #ef701f;
+}
+
+.cta-btn:hover > .arrow {
+  transition: 0.5s ease-in-out;
+  margin-left: 1.5rem;
+}
+@media screen and (max-width: 900px) {
+  .flex-section {
+    flex-direction: column;
+  }
 }
