--- a/css/style.css
+++ b/css/style.css
@@ -92,11 +92,7 @@ header .logo span {
 
 header .navbar a {
   color: #fff;
-<<<<<<< HEAD
-  font-size: 16px;
-=======
   font-size: 18px;
->>>>>>> 338a311c063d4f3eba07332117dcbb28ecfdda1e
   margin: 0 4rem;
 }
 
@@ -325,7 +321,7 @@ header .search-bar-container label:hover {
 
 .book .row .image img {
   width: auto;
-  height: 600px;
+  height: 450px;
 }
 
 .book .row form {
@@ -588,57 +584,8 @@ header .search-bar-container label:hover {
   text-align: center;
 }
 
-.footer-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  background-color: #222;
-}
-.footer-content h3 {
-  font-size: 2.1rem;
-  font-weight: 500;
-  text-transform: capitalize;
-  line-height: 3rem;
-}
-.footer-content p {
-  max-width: 500px;
-  margin: 10px auto;
-  line-height: 28px;
-  font-size: 14px;
-  color: #cacdd2;
-}
-.socials {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem 0 3rem 0;
-}
-.socials li {
-  margin: 0 10px;
-}
-.socials a {
-  text-decoration: none;
-  color: #fff;
-  border: 1.1px solid white;
-  padding: 5px;
-
-  border-radius: 50%;
-}
-.socials a i {
-  font-size: 1.1rem;
-  width: 20px;
-
-  transition: color 0.4s ease;
-}
-.socials a:hover i {
-  color: aqua;
-}
-
 .footer-bottom {
-  background: #222;
+  background: #333;
   height: 90px;
   width: 100vw;
   padding: 20px;
@@ -796,8 +743,14 @@ header .search-bar-container label:hover {
 
 .flex-section img {
   object-fit: cover;
-  width: 100%;
-  height: 500px;
+  width: 70%;
+  height: auto;
+  float: left;
+  border-radius: 4px;
+}
+
+.flex-section h1 {
+  font-size: 18px;
 }
 .alt-hero-banner {
   align-items: center;
@@ -806,7 +759,7 @@ header .search-bar-container label:hover {
 }
 .column-right {
   flex-basis: 50%;
-  margin: 3rem;
+
   line-height: 1.5;
 }
 .column-left {
@@ -822,23 +775,6 @@ p {
   font-size: 1rem;
   color: #777;
 }
-.cta-btn {
-  background: none;
-  color: #ef701f;
-  margin-top: 0.5rem;
-  font-size: 1rem;
-  padding: 15px 25px 15px 25px;
-  border: 2px solid #ef701f;
-  cursor: pointer;
-  font-weight: 600;
-  transition: 0.5s ease-in-out;
-}
-.arrow {
-  margin-left: 1rem;
-  transition: 0.5s ease-in-out;
-  height: 8px;
-  color: #ef701f;
-}
 
 .cta-btn:hover > .arrow {
   transition: 0.5s ease-in-out;
@@ -847,5 +783,12 @@ p {
 @media screen and (max-width: 900px) {
   .flex-section {
     flex-direction: column;
+  }
+  .flex-section img {
+    object-fit: cover;
+    width: 90%;
+    height: auto;
+    padding-left: 20px;
+    margin-top: 120px;
   }
 }
