--- a/css/style.css
+++ b/css/style.css
@@ -92,11 +92,7 @@ header .logo span {
 
 header .navbar a {
   color: #fff;
-<<<<<<< HEAD
-  font-size: 16px;
-=======
   font-size: 18px;
->>>>>>> 338a311c063d4f3eba07332117dcbb28ecfdda1e
   margin: 0 4rem;
 }
 
@@ -325,7 +321,7 @@ header .search-bar-container label:hover {
 
 .book .row .image img {
   width: auto;
-  height: 600px;
+  height: 450px;
 }
 
 .book .row form {
@@ -588,6 +584,58 @@ header .search-bar-container label:hover {
   text-align: center;
 }
 
+
+.footer-bottom {
+  background: #333;
+  height: 90px;
+  width: 100vw;
+  padding: 20px;
+  padding-bottom: 40px;
+  text-align: center;
+}
+.footer-bottom p {
+  float: left;
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+  color: white;
+}
+.footer-bottom p a {
+  color: #44bae8;
+  font-size: 16px;
+  text-decoration: none;
+}
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: 0.4;
+  font-weight: 200;
+}
+.footer-menu {
+  float: right;
+}
+.footer-menu ul {
+  display: flex;
+}
+.footer-menu ul li {
+  padding-right: 10px;
+  display: block;
+}
+.footer-menu ul li a {
+  color: #cfd2d6;
+  text-decoration: none;
+}
+.footer-menu ul li a:hover {
+  color: #27bcda;
+}
+
+@media (max-width: 500px) {
+  .footer-menu ul {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+}
+
 .footer-content {
   display: flex;
   align-items: center;
@@ -796,8 +844,18 @@ header .search-bar-container label:hover {
 
 .flex-section img {
   object-fit: cover;
+
+  width: 70%;
+  height: auto;
+  float: left;
+  border-radius: 4px;
+}
+
+.flex-section h1 {
+  font-size: 18px;
   width: 100%;
   height: 500px;
+
 }
 .alt-hero-banner {
   align-items: center;
@@ -806,7 +864,7 @@ header .search-bar-container label:hover {
 }
 .column-right {
   flex-basis: 50%;
-  margin: 3rem;
+
   line-height: 1.5;
 }
 .column-left {
@@ -822,6 +880,7 @@ p {
   font-size: 1rem;
   color: #777;
 }
+
 .cta-btn {
   background: none;
   color: #ef701f;
@@ -833,12 +892,8 @@ p {
   font-weight: 600;
   transition: 0.5s ease-in-out;
 }
-.arrow {
-  margin-left: 1rem;
-  transition: 0.5s ease-in-out;
-  height: 8px;
-  color: #ef701f;
-}
+
+
 
 .cta-btn:hover > .arrow {
   transition: 0.5s ease-in-out;
@@ -848,4 +903,13 @@ p {
   .flex-section {
     flex-direction: column;
   }
+
+  .flex-section img {
+    object-fit: cover;
+    width: 90%;
+    height: auto;
+    padding-left: 20px;
+    margin-top: 120px;
+  }
+
 }
