--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,7 @@ header .search-bar-container label:hover {
 .book .row .image img {
   width: auto;
   height: 450px;
+  margin: 35px;
 }
 
 .book .row form {
@@ -844,17 +845,15 @@ header .search-bar-container label:hover {
 
 .flex-section img {
   object-fit: cover;
-
-  width: 70%;
+  width: 60%;
   height: auto;
-  float: left;
   border-radius: 4px;
+  margin: 80px;
 }
 
 .flex-section h1 {
   font-size: 18px;
   width: 100%;
-  height: 500px;
 
 }
 .alt-hero-banner {
@@ -912,4 +911,29 @@ p {
     margin-top: 120px;
   }
 
+}
+.fa-user:before{
+  content: \f007;
+  font-size: 24px;
+  color: white;
+}
+
+.fa-user::before:hover{
+  content: \f007;
+  font-size: 24px;
+}
+
+.logoutName{
+  background-color: var(--orange);
+  padding: 5px;
+  color: white;
+  border-radius: 6px;
+}
+
+.edit{
+  font-size: 13px;
+  padding: 4px;
+  border: 2px solid #3da17b;
+  border-radius: 5px;
+  color: #3da17b;
 }
